# ip-tell-dnspod

./: .gitignore  Cargo.toml  Readme.md  api_test.rest  dnspod.db
logs/: main.log.2024-11-09
src/: error.rs  main.rs  utils.rs
src/dnspod/: action.rs  api_client.rs  client.rs  define.rs  mod.rs
src/ipaddr/: ipv6_net.rs  mod.rs  watch.rs
src/migration/: init.sql
src/model/: app.rs  constants.rs  mod.rs  records.rs  setting.rs  user.rs
src/web/: main.rs  mod.rs
src/web/middleware/: auth.rs  header.rs  log_bearer.rs  mod.rs  validate.rs
src/web/routes/: app.rs  mod.rs  record.rs  user.rs
yew-app/: Cargo.toml  Trunk.toml  index.css  index.html  index.scss
yew-app/src/: data_defined.rs  error.rs  main.rs  utils.rs
yew-app/src/pages/: home.rs  mod.rs  record.rs  user_login.rs
