[package]
name = "IpTellDnspod"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8",features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["macros","formatting"] }

[dev-dependencies]
dotenv = "0.15"
tokio= {version = "1.38.1" ,features = ["rt-multi-thread", "macros"] }