[package]
name = "IpTellDnspod"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8",features = ["chrono", "sqlite", "runtime-tokio", "tls-native-tls" ] }
serde = {version="1.0.214",features = ["derive"]}
serde_json = "1"
#time = { version = "0.3", features = ["macros","formatting"] }
chrono={version="0.4",features = ["serde"]}
# JWT
jsonwebtoken = "9"
# 加密相关
# 密码加密
argon2 = "0.5"
# 用户敏感信息加密
aes = "0.8.4"
cbc = "0.1.2"
aes-gcm = {version = "0.10.3", features=["std"]}
base64 = "0.22"
tokio= {version = "1.38.1" ,features = ["rt-multi-thread", "macros"] }  

[dev-dependencies]
dotenv = "0.15"
