[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
yew-router = "0.18.0"
gloo-console = "0.3.0"
#wasm-bindgen = "0.2"
[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
  "EventTarget",
]